[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/sky_0.png" type="Texture" id=1]
[ext_resource path="res://scenes/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/VCR.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Register.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Calendar.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Money.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Bin.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=11]
[ext_resource path="res://scenes/levels/Level.gd" type="Script" id=12]
[ext_resource path="res://assets/sky_1.png" type="Texture" id=13]
[ext_resource path="res://assets/wall.png" type="Texture" id=14]
[ext_resource path="res://assets/background.png" type="Texture" id=15]
[ext_resource path="res://assets/bin_repairs.png" type="Texture" id=16]
[ext_resource path="res://scenes/StickerStack.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/bin_trash.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 0.5
} ]

[node name="Level" type="Node2D"]
script = ExtResource( 12 )
_vhs = 70
_popcorn = 30
_return = 50
_rental = 50
_sale = 20
_normal = 100
_repair = 30
_trash = 20
_rewind = 75
_late = 40
order_size = 2

[node name="UI" parent="." instance=ExtResource( 5 )]
position = Vector2( 900, 0 )
scale = Vector2( 2, 2 )
z_index = 1

[node name="GameScene" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="BonusTween" type="Tween" parent="GameScene"]

[node name="Window" type="Node2D" parent="GameScene"]
position = Vector2( 196, 345 )

[node name="Sky" type="AnimatedSprite" parent="GameScene/Window"]
position = Vector2( 0, -1 )
frames = SubResource( 1 )
playing = true

[node name="Wall" type="Sprite" parent="GameScene"]
position = Vector2( 150, 41 )
texture = ExtResource( 14 )

[node name="Clock" parent="GameScene" instance=ExtResource( 2 )]
position = Vector2( 280, 24 )
scale = Vector2( 1, 1 )

[node name="background" type="Sprite" parent="GameScene"]
position = Vector2( 150, 100 )
z_index = 1
texture = ExtResource( 15 )

[node name="Calendar" parent="GameScene" instance=ExtResource( 6 )]
position = Vector2( 104, 91 )
scale = Vector2( 1, 1 )
z_index = 1

[node name="VCR" parent="GameScene" instance=ExtResource( 3 )]
position = Vector2( 55, 111 )
z_index = 1

[node name="Register" parent="GameScene" instance=ExtResource( 4 )]
position = Vector2( 264, 75 )
z_index = 1

[node name="Money" parent="GameScene" instance=ExtResource( 8 )]
position = Vector2( 1, 1 )
z_index = 5

[node name="Bins" type="Node2D" parent="GameScene"]
z_index = 1

[node name="Bin_Returns" parent="GameScene/Bins" instance=ExtResource( 9 )]
position = Vector2( 120, 181 )
scale = Vector2( 1, 1 )
types = [ 9 ]

[node name="Bin_Repairs" parent="GameScene/Bins" instance=ExtResource( 9 )]
position = Vector2( 193, 181 )
scale = Vector2( 1, 1 )
texture = ExtResource( 16 )
types = [ 3 ]

[node name="Bin_Trash" parent="GameScene/Bins" instance=ExtResource( 9 )]
position = Vector2( 267, 181 )
scale = Vector2( 1, 1 )
texture = ExtResource( 18 )
types = [ 7 ]

[node name="StickerStack" parent="GameScene" instance=ExtResource( 17 )]
position = Vector2( 222, 93 )
z_index = 1

[node name="Overlay" type="Node2D" parent="."]
z_index = 8

[node name="Tween" type="Tween" parent="Overlay"]

[node name="ColorRect" type="ColorRect" parent="Overlay"]
margin_right = 1200.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Overlay/ColorRect"]
margin_right = 240.0
margin_bottom = 120.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = ExtResource( 11 )
text = "NOVEMBER 6, 1996"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
